# Currently, we don't actually build anything in the `cpu' and `os'
# subdirectories.  If we ever do, they will need Makefiles.  For now,
# this is sufficient.  Unfortunately, their CVS subdirectories also
# get distributed as a side-effect.

EXTRA_DIST = configure.host depcomp cpu os sysdeps
MAINTAINERCLEANFILES = Makefile.in config.guess config.sub \
                       install-sh ltmain.sh missing mkinstalldirs 

