MAINTAINERCLEANFILES = Makefile.in version.h

noinst_HEADERS =		\
	atomicity.h		\
	bitset.h		\
	driver.h 		\
	driver_interface.h	\
	driver_parse.h	        \
	engine.h		\
	hardware.h 		\
	internal.h 		\
	intsimd.h 		\
	memops.h		\
	messagebuffer.h		\
	pool.h			\
	port.h			\
	ringbuffer.h	        \
	sanitycheck.h           \
	shm.h			\
	start.h			\
	systemtest.h            \
	unlock.h		\
	varargs.h		\
	version.h
