MAINTAINERCLEANFILES = Makefile.in version.h

libjackincludedir = $(includedir)/jack

libjackinclude_HEADERS = 	\
	jack.h			\
	ringbuffer.h		\
	timestamps.h		\
	transport.h		\
	types.h	

noinst_HEADERS =		\
	atomicity.h		\
	driver.h 		\
	driver_interface.h	\
	driver_parse.h		\
	engine.h		\
	hardware.h 		\
	internal.h 		\
	jslist.h		\
	memops.h		\
	pool.h			\
	port.h			\
	ringbuffer.h		\
	shm.h			\
	start.h			\
	version.h
