MAINTAINERCLEANFILES = Makefile.in version.h

libjackincludedir = $(includedir)/jack

libjackinclude_HEADERS = 	\
	intclient.h		\
	jack.h			\
	ringbuffer.h		\
	thread.h                \
	timestamps.h		\
	transport.h		\
	types.h	

noinst_HEADERS =		\
	atomicity.h		\
	driver.h 		\
	driver_interface.h	\
	driver_parse.h	        \
	engine.h		\
	hardware.h 		\
	internal.h 		\
	jslist.h		\
	memops.h		\
	messagebuffer.h		\
	pool.h			\
	port.h			\
	ringbuffer.h	        \
	shm.h			\
	start.h			\
	unlock.h		\
	varargs.h		\
	version.h
