MAINTAINERCLEANFILES = Makefile.in version.h

libjackincludedir = $(includedir)/jack

libjackinclude_HEADERS = 	\
	intclient.h		\
	jack.h			\
	ringbuffer.h		\
	statistics.h            \
	session.h               \
	thread.h                \
	timestamps.h		\
	transport.h		\
	types.h	\
	midiport.h \
	weakmacros.h \
	weakjack.h 

noinst_HEADERS =		\
	atomicity.h		\
	bitset.h		\
	driver.h 		\
	driver_interface.h	\
	driver_parse.h	        \
	engine.h		\
	hardware.h 		\
	internal.h 		\
	intsimd.h 		\
	jslist.h		\
	memops.h		\
	messagebuffer.h		\
	pool.h			\
	port.h			\
	ringbuffer.h	        \
	sanitycheck.h           \
	shm.h			\
	start.h			\
	systemtest.h            \
	unlock.h		\
	varargs.h		\
	version.h
